--- a/o-nas.html
+++ b/o-nas.html
@@ -21,7 +21,7 @@
             <li class="nav_item"><a href="co-robime">Čo robíme</a></li>
           </ul>
           <div class="nav_logo">
-            <a href="/"><img class="logo" src="/images/logo_circle.png" alt="Cobra logo"></a>
+            <a href="index"><img class="logo" src="/images/logo_circle.png" alt="Cobra logo"></a>
           </div>
           <ul class="nav_group_pc">
             <li class="nav_item"><a href="ples">Ples</a></li>
