--- a/kontakt.html
+++ b/kontakt.html
@@ -45,9 +45,9 @@
                     <div class="container contact_soc_head">
                         <h2>Naše sociálne siete:</h2>
                         <div class="contact_socials">
-                            <a href="https://www.instagram.com/cobra.gta/"><i class="fab fa-instagram"></i></a>
-                            <a href="https://www.tiktok.com/@cobra.sf.gta/"><i class="fab fa-tiktok"></i></a>
-                            <a href="mailto:cobra.gta.firma@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+                            <a href="https://www.instagram.com/cobra.gta/" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.tiktok.com/@cobra.sf.gta/" target="_blank"><i class="fab fa-tiktok"></i></a>
+                            <a href="mailto:cobra.gta.firma@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
                         </div>
                     </div>
                 </div>
@@ -62,9 +62,9 @@
         </div>
       </div>
       <div class="container socials">
-        <a href="https://www.instagram.com/cobra.gta/"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.tiktok.com/@cobra.sf.gta/"><i class="fab fa-tiktok"></i></a>
-        <a href="mailto:cobra.gta.firma@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+        <a href="https://www.instagram.com/cobra.gta/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.tiktok.com/@cobra.sf.gta/" target="_blank"><i class="fab fa-tiktok"></i></a>
+        <a href="mailto:cobra.gta.firma@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
       </div>
       <div class="copyright">
         <p class="container">Copyright &copy;2024; Designed by Tobias Frič</p>
