--- a/o-nas.html
+++ b/o-nas.html
@@ -63,9 +63,9 @@
     <footer>
       <div class="container footer_info">€obra š.f.<br>Gymnázium sv. Tomáša Akvinského<br>Zbrojničná 3, 04001 Košice</div>
       <div class="container socials">
-        <a href="https://www.instagram.com/cobra.gta/"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.tiktok.com/@cobra.sf.gta/"><i class="fab fa-tiktok"></i></a>
-        <a href="mailto:cobra.gta.firma@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+        <a href="https://www.instagram.com/cobra.gta/" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.tiktok.com/@cobra.sf.gta/" target="_blank"><i class="fab fa-tiktok"></i></a>
+        <a href="mailto:cobra.gta.firma@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
       </div>
       <div class="copyright">
         <p class="container">Copyright &copy;2024; Designed by Tobias Frič</p>
