--- a/index.html
+++ b/index.html
@@ -948,6 +948,6 @@ Večer sme si užili naplno — od slávnostného úvodu, cez tancovanie až po 
       <p>Inspired by <a href="https://www.digitalpeak.sk/" target="_blank">DigitalPeak</a></p>
     </div>
   </footer>
-  <button id="scrollToTop" title="Späť hore">⮝</button>
+  <button id="scrollToTop" title="Späť hore">&uarr;</button>
 </body>
 </html>
